fixed code for readability

--- a/style/main.scss
+++ b/style/main.scss
@@ -44,6 +44,7 @@ html, body{
   position: absolute;
   right: 0;
   z-index: 999;
+  user-select: none;
 
   &.container-bar-bottom{
     bottom:0;
